# handling-ambiguity

./: .gitignore  CLAUDE.md  README.md  exp1_runner.py  exp2_runner.py  pyproject.toml  requirements.txt
blog/: post_a_draft1.md  post_b_draft2.md
datasets/: __init__.py  eval_dana.json
datasets/dana/: eval_set.json
datasets/data_aug/: __init__.py  augment_data.py  fix_violations.py  generator.py  mislabeled.md  prompts.py  rewritten.json  sampler.py  validator.py
datasets/data_aug_pranav/: AUTORESEARCH.md  README.md  compute_metrics.py  conversations_dana_meta.json  conversations_hugo.json  dedup_scenarios.py  enrich_scenarios.py  generate_conversations.py  generate_scenarios.py  notes.md  scenarios_dana.jsonl  scenarios_dana_dedup_meta.json  (+10 more)
helpers/: bootstrap.py  check_progress_1a.py  check_progress_1b.py  check_progress_2a.py  check_progress_2b.py  client.py  harness.py  metrics.py  schema_utils.py  scoring.py
prompts/: flow_detection.py  intent_classification.py  param_extraction.py  prompt_tuning.py  slot_filling.py  tool_calling.py
results/: build_report_1a.py  build_report_1b.py  build_report_1c.py  build_report_2.py
scripts/: find_enum_violations.py  fix_eval_enum_violations.py  migrate_eval_params.py
tests/: test_param_validation.py  test_score_tool_params.py
tests_i/: test_quality_checks.py
tools/: check_lines.sh  flow_tool_mapping_dana.md  flow_tool_mapping_hugo.md  tool_manifest_dana.json  tool_manifest_hugo.json
training/: README.md  eval.py  rewards.py  rollouts.py  sft_data.py  sft_trainer.py  stages.py  train_nlu.py
(+451 files in other folders)
