[project]
name = "handling-ambiguity"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "python-dotenv",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "wandb",
    "sglang",
    "nest-asyncio",
]

[dependency-groups]
dev = []
